--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="container position-relative d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center">
           <!-- Uncomment the line below if you also wish to use an image logo -->
-          <img src="assets/img/logo.png" alt="">
+          <img src="assets/img/logo.png" alt="logo">
           <h1 class="sitename">devEdge</h1>
           <span>.</span>
         </a>
@@ -101,7 +101,7 @@
       <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
         <div class="row gy-5 justify-content-between">
           <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
-            <h2><span>Welcome to </span><span class="accent">Impact</span></h2>
+            <h2><span>Welcome to </span><span class="accent">devEdge</span></h2>
             <p>Sed autem laudantium dolores. Voluptatem itaque ea consequatur eveniet. Eum quas beatae cumque eum quaerat.</p>
             <div class="d-flex">
               <a href="#about" class="btn-get-started">Get Started</a>
@@ -109,7 +109,7 @@
             </div>
           </div>
           <div class="col-lg-5 order-1 order-lg-2">
-            <img src="assets/img/hero-img.svg" class="img-fluid" alt="">
+            <img src="assets/img/hero-img.svg" class="img-fluid" alt="" style="mix-blend-mode: darken;">
           </div>
         </div>
       </div>
